; ModuleID = '/home/carl/AnghaBench/systemd/src/resolve/extr_dns-type.c_dns_type_may_redirect.c'
source_filename = "/home/carl/AnghaBench/systemd/src/resolve/extr_dns-type.c_dns_type_may_redirect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DNS_TYPE_CNAME = common dso_local global i32 0, align 4
@DNS_TYPE_DNAME = common dso_local global i32 0, align 4
@DNS_TYPE_NSEC3 = common dso_local global i32 0, align 4
@DNS_TYPE_NSEC = common dso_local global i32 0, align 4
@DNS_TYPE_RRSIG = common dso_local global i32 0, align 4
@DNS_TYPE_NXT = common dso_local global i32 0, align 4
@DNS_TYPE_SIG = common dso_local global i32 0, align 4
@DNS_TYPE_KEY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dns_type_may_redirect(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @dns_type_is_pseudo(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @DNS_TYPE_CNAME, align 4
  %11 = load i32, i32* @DNS_TYPE_DNAME, align 4
  %12 = load i32, i32* @DNS_TYPE_NSEC3, align 4
  %13 = load i32, i32* @DNS_TYPE_NSEC, align 4
  %14 = load i32, i32* @DNS_TYPE_RRSIG, align 4
  %15 = load i32, i32* @DNS_TYPE_NXT, align 4
  %16 = load i32, i32* @DNS_TYPE_SIG, align 4
  %17 = load i32, i32* @DNS_TYPE_KEY, align 4
  %18 = call i32 @IN_SET(i32 %9, i32 %10, i32 %11, i32 %12, i32 %13, i32 %14, i32 %15, i32 %16, i32 %17)
  %19 = icmp ne i32 %18, 0
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %8, %7
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i64 @dns_type_is_pseudo(i32) #1

declare dso_local i32 @IN_SET(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
